samples/_failures_safe/1761641109_27d25a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e4e4120.c: In function ‘main’:
./samples/SAFE/__tmp_6e4e4120.c:162:5: error: expected declaration or statement at end of input
  162 |     if (len > 0 && input[len-1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_6e4e4120.c:162:5: error: expected declaration or statement at end of input
